# Dear-ImGui-Tool

./: .gitignore  CMakeLists.txt  CMakeLists_test_rot.txt  README.md  README_FEATURE_DESIGN.md  README_MASTERED_FEATURE.md  build-only.bat  build-test-rot.bat  build.bat  imgui.ini  install_glfw.bat  main.cpp  setup.bat  test_rot.cpp  window_config.txt
.cursor/rules/: code-style.mdc  compile-only.mdc  danmaku-development-lessons.mdc  debugging-guidelines.mdc  engineering-practices.mdc  feature-development.mdc  project-structure.mdc  vs-inspector-debugging.mdc  windows-com-debugging.mdc  windows-ui-patterns.mdc
docs/: feature_development.md  vs_inspector_debugging_guide.md
src/: feature_manager.cpp  feature_manager.h  replace_tool.cpp  replace_tool.h  vs_inspector.cpp  vs_inspector.h  vs_inspector_backup.cpp  word_reminder.cpp  word_reminder.h  word_reminder_utils.cpp  word_reminder_utils.h
